post_create done

--- a/project/board/templates/board/post_new.html
+++ b/project/board/templates/board/post_new.html
@@ -73,7 +73,7 @@
           <div class="post__form__bottom">
             <div class="form__bottom__left">
               <div onclick="photoClick()">
-                <img src="{% static 'svg/photo.svg' %}">
+                <img src="{% static 'svg/pic-gif.svg' %}">
               </div>
               <input type="file" accept="image/*" name="images" multiple id="image_field">
             </div>
@@ -84,7 +84,8 @@
                 anon
               </div>
               <button type="submit" class="reset-button">
-                <img src="{% static 'svg/send message.svg' %}" alt="">
+                <img src="{% static 'svg/post_button.svg' %}" alt=""
+                     id="post_button">
               </button>
             </div>
           </div>
