--- a/project/board/static/board/css/post_new.css
+++ b/project/board/static/board/css/post_new.css
@@ -102,13 +102,11 @@
   align-items: center;
 }
 
-.form__bottom__left img {
-  cursor: pointer;
-  width: 35px;
-}
-
-.form__bottom__left input {
-  display: none;
+.form__bottom__left > div {
+  position: absolute;
+  width: 85px;
+  height: 28px;
+  background: white;
 }
 
 .form__bottom__right {
@@ -152,6 +150,12 @@
   background-color: #4fbcbd;
 }
 
+#post_button {
+  /*width: 100%;*/
+  height: 25px;
+}
+
+
 @media (max-width: 767px) {
   body {
     background-color: white;
@@ -179,6 +183,11 @@
 
   #id_ctgy {
     background-color: white;
+  }
+
+  .form__bottom__left > input {
+    width: 100%;
+    margin-right: 5%;
   }
 }
 
