--- a/project/board/static/board/css/post_detail.css
+++ b/project/board/static/board/css/post_detail.css
@@ -89,6 +89,10 @@
   justify-content: space-between;
 }
 
+.post__function div {
+  cursor: pointer;
+}
+
 .post__bookmark {
   width: 18px;
 }
@@ -110,6 +114,7 @@
   align-items: center;
   font-weight: bolder;
   font-size: 18px;
+  cursor: pointer;
 }
 
 #post__author > img {
@@ -343,6 +348,7 @@
 .comment__top__left {
   display: flex;
   align-items: center;
+  cursor: pointer;
 }
 
 .comment__top__left > img {
