--- a/project/board/templates/board/post_detail.html
+++ b/project/board/templates/board/post_detail.html
@@ -72,8 +72,8 @@
                 <p></p>
                 <form action = "{% url 'core:chat:index' univ.url_name %}" method="post" id="mdl_f">
                 {%csrf_token%}
-                <input type="hidden" id="other_v" name="other"> 
-                <input type="hidden" id="type_v" name="type"> 
+                <input type="hidden" id="other_v" name="other">
+                <input type="hidden" id="type_v" name="type">
                 <div class="modal-button" id="yes">
                 <img src="{% static "/svg/messege box.svg" %}">
                 <div>
@@ -294,34 +294,39 @@
     <div class="report-modal" id="on-report-modal" style="display: none;">
         <div class="report-form-container">
             <div class="report-radio__wrap">
-            <label for="">
-              Sexual insult
-            </label>
-              <input type="radio" name="abuseType" class="report__form-radio" id="sexual" value="sexual">
+                <div class="report__name">
+                    Sexual insult
+                </div>
+                <input type="radio" name="abuseType" class="report__form-radio" id="sexual" value="sexual">
+                <label for="sexual"></label>
             </div>
             <div class="report-radio__wrap">
-            <label for="">
-              Cyber bullying
-            </label>
-              <input type="radio" name="abuseType" class="report__form-radio" id="bully" value="bully">
+                <div class="report__name">
+                    Cyber bullying
+                </div>
+                <input type="radio" name="abuseType" class="report__form-radio" id="bully" value="bully">
+                <label for="bully"></label>
             </div>
             <div class="report-radio__wrap">
-            <label for="">
-              Racisist remarks
-            </label>
-              <input type="radio" name="abuseType" class="report__form-radio" id="racisist" value="racisist">
+                <div class="report__name">
+                    Racist remarks
+                </div>
+                <input type="radio" name="abuseType" class="report__form-radio" id="racist" value="racisist">
+                <label for="racist"></label>
             </div>
             <div class="report-radio__wrap">
-            <label for="">
-                Illegal activity
-            </label>
+                <div class="report__name">
+                    Illegal activity
+                </div>
                 <input type="radio" name="abuseType" class="report__form-radio" id="illegal" value="illegal">
+                <label for="illegal"></label>
             </div>
             <div class="report-radio__wrap">
-            <label for="">
-                Others
-            </label>
+                <div class="report__name">
+                    Others
+                </div>
                 <input type="radio" name="abuseType" class="report__form-radio" id="others" value="others">
+                <label for="others"></label>
             </div>
             <button type="submit" onclick="reportPostContent({{ post.pk }})" class="report-button">
             <img src="{% static "/svg/report-white.svg" %}" alt="">Report abuse
@@ -356,7 +361,7 @@
     comment_authors.push("{{child.author}}")
     {% endfor %}
     {% endfor %}
-    
+
     xBtn.addEventListener('click', e=>{
       modal.style.display='none';
     })
@@ -373,7 +378,7 @@
       }
       catch (_e) {
         if(_e.message==1) mdl_f.submit()
-        else alert(_e) 
+        else alert(_e)
         e.stopPropagation()
       }
       modal.style.display='none';
