--- a/project/board/templates/board/category_new.html
+++ b/project/board/templates/board/category_new.html
@@ -20,7 +20,7 @@
           </div>
           <div class="header__logo">
             <a href="{% url 'core:board:main_board' url_name %}">
-              <img src="{% static "/svg/box logo.svg" %}">
+              <img src="{% static "/svg/box-logo.svg" %}">
               <img src="{{ univ.logo_mobile.url }}">
             </a>
           </div>
