--- a/project/core/templates/core/main.html
+++ b/project/core/templates/core/main.html
@@ -39,7 +39,7 @@
             {% endfor %}
             <div class="univ_list__univ">
               <div class="univ__name">
-                Isn't your university here?
+                My university is not here
               </div>
               <input type="radio" name="univ" value="none"
                      class="univ_list__check" id="univ_list_none">
