--- a/project/board/static/board/css/board_post/board_post_large.css
+++ b/project/board/static/board/css/board_post/board_post_large.css
@@ -39,7 +39,7 @@
 
 .board__post__container {
     background-color: #ffffff;
-    height: 201px;
+    height: auto;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -47,7 +47,9 @@
     margin: 20px 0;
     border-radius: 12px;
 }
-
+.board__post__like img {
+    width: 100%;
+}
 
 .board__post__like {
     display: flex;
@@ -60,6 +62,7 @@
     height: 70px;
     margin-left: 20px;
     margin-right: 17px;
+    font-weight: bold;
 }
 
 .board__post__like button {
@@ -78,6 +81,7 @@
 
 .post__text {
     width: 70%;
+    height: auto;
     display: flex;
     flex-direction: column;
 }
@@ -133,15 +137,14 @@
 }
 
 .post__mid__title {
-    font-size: 33px;
+    font-size: 1.6rem;
     font-weight: normal;
     font-style: normal;
     line-height: 1.21;
     text-align: left;
     margin-bottom: 5px;
     overflow: hidden;
-    text-overflow: ellipsis;
-    word-wrap: nowrap;
+    word-break: break-all;
 }
 
 .post__mid__title a {
@@ -151,7 +154,7 @@
 }
 
 .post__mid__content {
-    font-size: 20px;
+    font-size: 1.2rem;
     font-weight: normal;
     font-style: normal;
     font-stretch: normal;
@@ -197,6 +200,18 @@
     width: 30px;
     text-align: left;
     margin-right: 10%;
+}
+
+.s_con span {
+    font-size: 1rem;
+}
+
+.post__top__author {
+    font-size: 1rem;
+}
+
+.post__bottom__time {
+    font-size: 0.9rem;
 }
 
 .board__pannel__right a {
