--- a/project/board/static/board/css/board_post/board_post_large.css
+++ b/project/board/static/board/css/board_post/board_post_large.css
@@ -15,7 +15,7 @@
 }
 
 .pannel__top__state {
-    width: 300px;
+    width: 150px;
 }
 
 .board__pannel__top a {
@@ -25,7 +25,8 @@
 }
 
 .board__pannel__top img {
-    width: 120px;
+    /*width: 120px;*/
+    width: 50%;
 }
 
 .board__pannel__left {
@@ -207,7 +208,7 @@
 }
 
 .post__top__author {
-    font-size: 1rem;
+    font-size: 1.1rem;
 }
 
 .post__bottom__time {
